created tutorial website

--- a/EastPoint/01-tutorial.html
+++ b/EastPoint/01-tutorial.html
@@ -1,2 +1,81 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Marvel Madness</title>
+    </head>
+    <body>
+        <h1 style="color:Tomato;">Spiderman</h1>
+        <h2>IronMan</h2>
+        <h3>Groot</h3>
+        <h4>NightCrawler</h4>
+        <h5>Rogue</h5>
+        <h6>Gambit</h6>
+        <p>I &hearts; Spiderman the most</p>
+        <p>&#128060;</p>
+        <p>&#10048;</p>
+    </body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!DOCTYPE html>
+<!--declares the document type as HTML-->
 <!--This is my practice website!!-->
 <!--HTML stands for Hyper Text Markup Language-->
+<html>
+<!--root element of HTML page-->
+    <head>
+    <!--contains data-->
+        <title>Ms. Erins website !!</title>
+        <!--gives the website a title in the pages tab-->
+    </head>
+    <body>
+    <!--container for all visible contents-->
+
+    </body>
+</html>
