--- a/csce242/index.html
+++ b/csce242/index.html
@@ -1,1 +1,14 @@
-hello world!!
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>CSCE 242: Erin Kelly</title>
+    </head>
+    <body>
+        <h1>CSCE 242</h1>
+        <h2>Erin Kelly</h2>
+        <h3>Assignments</h3>
+        <ol>
+            <li><a href="C:\Users\erine\WebDev\eek01.github.io\csce242\assignments\01-basic-html\index.html">Basic HTML</a></li>
+        </ol>
+    </body>
+</html>
