--- a/csce242/examples/01-html/index.html
+++ b/csce242/examples/01-html/index.html
@@ -1,1 +1,21 @@
-lalalala
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Squirrels</title>
+    </head>
+    <body>
+        <h1>How to Raise Squirrels</h1>
+        <h2>By: Erin Kelly</h2>
+        <p>Squirrels are cute and have fluffy tails! &#128063;</p>
+        <img src="images/squirrel-img.jpg" alt="Squirrel holding its hand up." style="width: 500px;">
+        <!--resize imgs in diff software instead of changing the width in code to avoid slowing websites!!-->
+        <h3>Instructions</h3>
+        <ol>
+            <li>Capture Squirrels</li>
+            <li>Give them pedialite</li>
+            <li>Give them puppy milk</li>
+            <li>Have a family!</li>
+        </ol>
+        <a href="https://www.wikihow.com/Raise-a-Baby-Squirrel">wikihow: How to raise squirrels!</a>
+    </body>
+</html>
