added more tags!

--- a/EastPoint/01-tutorial.html
+++ b/EastPoint/01-tutorial.html
@@ -13,6 +13,36 @@
         <p>I &hearts; Spiderman the most</p>
         <p>&#128060;</p>
         <p>&#10048;</p>
+        <h3>Favorite Marvel Shows</h3>
+        <ul>
+            <li>Ulmtimate Spiderman</li>
+            <li>Spiderman: Into the Spiderverse</li>
+            <li>Spiderman: Homecoming</li>
+        </ul>
+        <h3>Fav foods!</h3>
+        <ol>
+            <li>Chicken pot pie</li>
+            <li>Fudge</li>
+            <li>Pizza</li>
+            <li>Smoothie Bowls</li>
+        </ol>
+
+        <table>
+            <tr>
+                <th>fav artists</th>
+                <th>fav genre</th>
+            </tr>
+            <tr>
+                <td>Backseat Lovers</td>
+                <td>Indie</td>
+            </tr>
+            <tr>
+                <td>MotherMother</td>
+                <td>Midwest Emo</td>
+            </tr>
+        </table>
+
+        <a href="https://marvel.fandom.com/wiki/Marvel_Database">Click me!</a>
     </body>
 </html>
 
