--- a/csce242/assignments/01-basic-html/index.html
+++ b/csce242/assignments/01-basic-html/index.html
@@ -1,1 +1,44 @@
-Hello world! Im assignment 1
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Barbie</title>
+    </head>
+    <body>
+        <h1>Barbie's impact</h1>
+        <p>Barbie is a world famous doll. When the product first came out it was revolutionary. She was the first toy doll that wasn't a baby. Before her, little girls only played "mother." This doll allowed little girls to dream big.</p>
+        <p>As Barbie became bigger, she expanded into many different professions. She became not only an a toy but a role model. She didn't deny her femininity to prove herself. She did everything she wanted and was kind and feminine and powerful the whole time.</p>
+        <img src="images/firstBarbie.jpg">
+        <img src="images/barbieVetImg.jpg">
+        <h3>Barbie Movies</h3>
+        <ul>
+            <li>Barbie: A Fashion Fairytale</li>
+            <li>Barbie in a Christmas Carol</li>
+            <li>Barbie and the Three Musketeers</li>
+            <li>Barbie in the Pink Shoes</li>
+        </ul>
+        <table>
+            <tr>
+                <th>Barbie Colors</th>
+                <th>Barbie Media</th>
+                <th>Barbie Professions</th>
+            </tr>
+            <tr>
+                <td>Pink</td>
+                <td>TV Shows</td>
+                <td>Veteranarian</td>
+            </tr>
+            <tr>
+                <td>Black</td>
+                <td>Movies</td>
+                <td>Fashion Designer</td>
+            </tr>
+                        <tr>
+                <td>Whtie</td>
+                <td>YouTube</td>
+                <td>Chef</td>
+            </tr>
+        </table>
+        <a href="https://shop.mattel.com/collections/barbie">Shop for Barbie dolls<br></a>
+        <a href="https://barbie.fandom.com/wiki/Barbie_Wiki">Learn more about Barbie!</a>
+    </body>
+</html>
