--- a/csce242/index.html
+++ b/csce242/index.html
@@ -4,9 +4,9 @@
         <title>CSCE 242: Erin Kelly</title>
     </head>
     <body>
-        <h1>CSCE 242</h1>
-        <h2>Erin Kelly</h2>
-        <h3>Assignments</h3>
+        <h1>CSCE 242 - Erin Kelly</h1>
+        <h2>Assignments</h2>
+        <p>Web Applications</p>
         <ol>
             <li><a href="C:\Users\erine\WebDev\eek01.github.io\csce242\assignments\01-basic-html\index.html">Basic HTML</a></li>
         </ol>
