--- a/EastPoint/01-tutorial.html
+++ b/EastPoint/01-tutorial.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Marvel Madness</title>
+        <link rel="icon" type="image/x-icon" href="images/favicon (2).ico">
     </head>
     <body>
         <h1 style="color:Tomato;">Spiderman</h1>
@@ -41,8 +42,9 @@
                 <td>Midwest Emo</td>
             </tr>
         </table>
-
         <a href="https://marvel.fandom.com/wiki/Marvel_Database">Click me!</a>
+        <img src="images/spiderman-img.webp" alt="Spiderman Swinging" width="500px">
+        <a href="C:\Users\erine\WebDev\eek01.github.io\EastPoint\02-assignment1.html">Assignment 1</a>
     </body>
 </html>
 
