--- a/EastPoint/02-assignment1.html
+++ b/EastPoint/02-assignment1.html
@@ -4,6 +4,7 @@
         <title>Barbie</title>
     </head>
     <body>
+        <a href="https://barbie.fandom.com/wiki/Barbie_Wiki">Link back to original website!</a>
         <h1>Barbie's impact</h1>
         <p>Barbie is a world famous doll. When the product first came out it was revolutionary. She was the first toy doll that wasn't a baby. Before her, little girls only played "mother." This doll allowed little girls to dream big.</p>
         <p>As Barbie became bigger, she expanded into many different professions. She became not only an a toy but a role model. She didn't deny her femininity to prove herself. She did everything she wanted and was kind and feminine and powerful the whole time.</p>
@@ -39,6 +40,5 @@
             </tr>
         </table>
         <a href="https://shop.mattel.com/collections/barbie">Shop for Barbie dolls<br></a>
-        <a href="https://barbie.fandom.com/wiki/Barbie_Wiki">Learn more about Barbie!</a>
     </body>
 </html>
