--- a/csce242/index.html
+++ b/csce242/index.html
@@ -8,7 +8,7 @@
         <h2>Assignments</h2>
         <p>Web Applications</p>
         <ol>
-            <li><a href="eek01.github.io/csce242/assignments/01-basic-html/index.html">Basic HTML</a></li>
+            <li><a href="assignments/01-basic-html/index.html">Basic HTML</a></li>
         </ol>
     </body>
 </html>
