added example css

--- a/csce242/examples/01-html/index.html
+++ b/csce242/examples/01-html/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Squirrels</title>
+        <link rel="stylesheet" href="../02-css/styles.css">
     </head>
     <body>
         <h1>How to Raise Squirrels</h1>
