finished assignment two

--- a/csce242/examples/02-css/index.html
+++ b/csce242/examples/02-css/index.html
@@ -2,20 +2,44 @@
 <html>
     <head>
         <title>Squirrels</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+    <div id="content">
         <h1>How to Raise Squirrels</h1>
         <h2>By: Erin Kelly</h2>
         <p>Squirrels are cute and have fluffy tails! &#128063;</p>
         <img src="images/squirrel-img.jpg" alt="Squirrel holding its hand up." style="width: 500px;">
         <!--resize imgs in diff software instead of changing the width in code to avoid slowing websites!!-->
-        <h3>Instructions</h3>
+        <h2 id="instruc">Instructions</h2>
         <ol>
             <li>Capture Squirrels</li>
             <li>Give them pedialite</li>
             <li>Give them puppy milk</li>
             <li>Have a family!</li>
         </ol>
+                <table>
+            <tr>
+                <th>--Barbie Colors--</th>
+                <th>--Barbie Media--</th>
+                <th>--Barbie Professions--</th>
+            </tr>
+            <tr>
+                <td>Pink</td>
+                <td>TV Shows</td>
+                <td>Veteranarian</td>
+            </tr>
+            <tr>
+                <td>Black</td>
+                <td>Movies</td>
+                <td>Fashion Designer</td>
+            </tr>
+                        <tr>
+                <td>Whtie</td>
+                <td>YouTube</td>
+                <td>Chef</td>
+            </tr>
         <a href="https://www.wikihow.com/Raise-a-Baby-Squirrel">wikihow: How to raise squirrels!</a>
+    </div>
     </body>
 </html>
