--- a/csce242/index.html
+++ b/csce242/index.html
@@ -2,13 +2,18 @@
 <html>
     <head>
         <title>CSCE 242: Erin Kelly</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <div class="content">
         <h1>CSCE 242 - Erin Kelly</h1>
         <h2>Assignments</h2>
         <p>Web Applications</p>
+        <a id="nav" href="https://github.com/eek01/eek01.github.io/tree/main/csce242">GitHub</a>
         <ol>
             <li><a href="assignments/01-basic-html/index.html">Basic HTML</a></li>
+            <li><a href="assignments/02-basic-css/index.html">Basic CSS</a></li>
         </ol>
+        </div>
     </body>
 </html>
