--- a/csce242/index.html
+++ b/csce242/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="content">
+        <div id="content">
         <h1>CSCE 242 - Erin Kelly</h1>
         <h2>Assignments</h2>
         <p>Web Applications</p>
