--- a/csce242/index.html
+++ b/csce242/index.html
@@ -6,14 +6,57 @@
     </head>
     <body>
         <div id="content">
-        <h1>CSCE 242 - Erin Kelly</h1>
-        <h2>Assignments</h2>
-        <p>Web Applications</p>
-        <a id="nav" href="https://github.com/eek01/eek01.github.io/tree/main/csce242">GitHub</a>
-        <ol>
-            <li><a href="assignments/01-basic-html/index.html">Basic HTML</a></li>
-            <li><a href="assignments/02-basic-css/index.html">Basic CSS</a></li>
-        </ol>
+            <header id="main-header">
+                <p>Erin Kelly</p>
+                <h1>CSCE 242 - Web Applications</h1>
+            </header>
+            <main id="main-content">
+                <h2>Assignments</h2>
+                <div id="assignments" class="columns">
+                    <section class="one">
+                        <a href="assignments/01-basic-html/index.html">
+                        <h3>Assignment 1 - Basic HTML</h3>
+                        <div class="assign-img">
+                            <img src="images/basicHTMLScreenshot.png" alt="Screenshot of the basic html website">
+                        </div>
+                        <p>This assignment was to ensure I understood the basics of HTML. This includes basic tags and code layout.</p>
+                        </a>
+                    </section>
+                    <section class="one">
+                        <a href="assignments/02-basic-css/index.html">
+                        <h3>Assignment 2 - Basic CSS</h3>
+                        <div class="assign-img">
+                            <img src="images/basicCSSScreenshot.png" alt="Screenshot of the basic css website">
+                        </div>
+                        <p>Basic CSS was an introduction to cascading style sheets.</p>
+                        </a>
+                    </section>
+                    <section class="one">
+                        <a href="assignments\03-page-layout\index.html">
+                        <h3>Assignment 3 - Page Layout</h3>
+                        <div class="assign-img">
+                            <img src="" alt="">
+                        </div>
+                        <p>This page layout assignment was an introduction into using css to create different layouts on webpages.</p>
+                        </a>
+                    </section>
+                </div>
+                <h2>Projects</h2>
+                <div id="projects" class="columns">
+                    <section class="one">
+                        <a href="https://github.com/eek01/eek01.github.io/blob/main/csce242/project/part1/project-topic.pdf">
+                        <h3>Topic PDF</h3>
+                        <div class="assign-img">
+                            <img src="images/projectTopicScreenshot.png" alt="A screenshot of a pdf explaining the project topic">
+                        </div>
+                        <p>This is the description of my project topic; an e-commerce website.</p>
+                        </a>
+                    </section>
+                </div>
+            </main>
+            <footer id="main-footer">
+
+            </footer>
         </div>
     </body>
 </html>
