working on bugs

--- a/csce242/assignments/03-page-layout/index.html
+++ b/csce242/assignments/03-page-layout/index.html
@@ -19,9 +19,9 @@
         <main id="main-content">
             <div class="flex-container">
                 <section id="important-txt" class="one">
-                    <h3>This is very important text</h3>
+                    <h2>This is very important text</h2>
                 </section>
-                <section id="images" class="one">
+                <section class="one">
                     <div class="flex-container">
                         <section class="first-row">
                             <h3>Title 1</h3>
@@ -46,7 +46,7 @@
                             <div class="first-row-image">
                                 <img src="images/layoutDummy.png" alt="A teal image with 200x300">
                             </div>
-                        </section>
+                        </section>  
                     </div>
                 </section>
             </div>
