--- a/csce242/assignments/03-page-layout/index.html
+++ b/csce242/assignments/03-page-layout/index.html
@@ -18,11 +18,10 @@
         </header>
         <main id="main-content">
             <div class="flex-container">
-                <section id="important-txt" class="one">
+                <aside id="important-txt" class="one">
                     <h2>This is very important text</h2>
-                </section>
-                <section class="one">
-                    <div class="flex-container">
+                </aside>
+                <section class="one flex-container">
                         <section class="first-row">
                             <h3>Title 1</h3>
                             <div class="first-row-image">
@@ -47,7 +46,6 @@
                                 <img src="images/layoutDummy.png" alt="A teal image with 200x300">
                             </div>
                         </section>  
-                    </div>
                 </section>
             </div>
             <div id="bottom-rows">
