--- a/csce242/index.html
+++ b/csce242/index.html
@@ -35,7 +35,7 @@
                         <a href="assignments\03-page-layout\index.html">
                         <h3>Assignment 3 - Page Layout</h3>
                         <div class="assign-img">
-                            <img src="" alt="">
+                            <img src="images/page-layout-img.png" alt="A screenshot of the page-layout website">
                         </div>
                         <p>This page layout assignment was an introduction into using css to create different layouts on webpages.</p>
                         </a>
