--- a/csce242/examples/03-flex/index.html
+++ b/csce242/examples/03-flex/index.html
@@ -1,3 +1,5 @@
+<!--block level - creates space above and below ex) div, p, h1, li...-->
+<!--inline element - no space above or below ex) a, b, img, i...-->
 <!DOCTYPE html>
 <html>
     <head>
@@ -5,36 +7,69 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <!--block level - creates space above and below ex) div, p, h1, li...-->
-        <!--inline element - no space above or below ex) a, b, img, i...-->
         <div id="main-content">
             <header id="main-header">
                 <h1>Flex Demonstration</h1>
                 <nav id="main-nav">
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <!-- "#" means go to the current page-->
-                        <li><a href="#">About</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html">About</a></li>
                         <li><a href="#">Pictures</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
             </header>
             <main id="content">
-                <h2>My Stuff</h2>
-                <div id="gallery" class="columns">
-                    <section class="one">
-                        <h3>Title</h3>
-                        <p>some textttt</p>
-                    </section>
-                    <section class="one">
-                        <h3>Title</h3>
-                        <p>some textttt</p>
-                    </section>
-                    <section class="one">
-                        <h3>Title</h3>
-                        <p>some textttt</p>
-                    </section>
+                <div class="columns">
+                    <aside id="sidebar" class="one">
+                        <h3>My Aside</h3>
+                        <ul>
+                            <li>number 1</li>
+                            <li>number 2</li>
+                            <li>number 3</li>
+                            <li>number 4</li>
+                        </ul>
+                    </aside>
+                    <div class="four">
+                        <h2>My Stuff</h2>
+                        <div id="gallery" class="columns">
+                            <section class="one">
+                                <h3>Title</h3>
+                                <p>I'm some text</p>
+                            </section>
+                            <section class="one">
+                                <h3>Title</h3>
+                                <p>I'm some text</p>
+                            </section>
+                            <section class="one">
+                                <h3>Title</h3>
+                                <p>I'm some text</p>
+                            </section>
+                        </div>
+                        <div id="list">
+                            <section class="item columns">
+                                <img src="https://dummyimage.com/150x150/000/fff">
+                                <div>
+                                    <h3>Title</h3>
+                                    <p>I love to talk so much look at me type.</p>
+                                </div>
+                            </section>
+                            <section class="item columns">
+                                <img src="https://dummyimage.com/150x150/000/fff">
+                                <div>
+                                    <h3>Title</h3>
+                                    <p>I love to talk so much look at me type.</p>
+                                </div>
+                            </section>
+                            <section class="item columns">
+                                <img src="https://dummyimage.com/150x150/000/fff">
+                                <div>
+                                    <h3>Title</h3>
+                                    <p>I love to talk so much look at me type.</p>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
                 </div>
             </main>
             <footer id="main-footer">
@@ -43,6 +78,3 @@
         </div>
     </body>
 </html>
-
-<!-- notes on flex box assignment: parent div, has columns, in right column make four sections, each flex:1;-->
-<!-- for body, margin auto, parent w class columns,w two items, put div around img,  -->
