--- a/csce242/index.html
+++ b/csce242/index.html
@@ -40,6 +40,15 @@
                         <p>This page layout assignment was an introduction into using css to create different layouts on webpages.</p>
                         </a>
                     </section>
+                    <section class="one">
+                        <a href="assignments\04-recreate-css-page\index.html">
+                            <h3>Assignment 4 - Recreate CSS Page</h3>
+                            <div class="assign-img">
+                                <img src="images/recreateCSSPageScrenshot.png" alt="Screenshot of my recreation of a UofSC website page">
+                            </div>
+                            <p>This recreation assignment is to show that I can reacreate html/css layouts given to me.</p>
+                        </a>
+                    </section>
                 </div>
                 <h2>Projects</h2>
                 <div id="projects" class="columns">
