--- a/csce242/index.html
+++ b/csce242/index.html
@@ -61,6 +61,15 @@
                         <p>This is the description of my project topic; an e-commerce website.</p>
                         </a>
                     </section>
+                    <section class="one">
+                        <a href="https://github.com/eek01/eek01.github.io/blob/main/csce242/project/part1/project-topic.pdf">
+                        <h3>Wireframe</h3>
+                        <div class="assign-img">
+                            <img src="images/wireframeScreenshot.png" alt="A screenshot of a wireframe for my project">
+                        </div>
+                        <p>This is the wireframe of my home page for my website.</p>
+                        </a>
+                    </section>
                 </div>
             </main>
             <footer id="main-footer">
