added pdf to github

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -62,7 +62,7 @@
                         </a>
                     </section>
                     <section class="one">
-                        <a href="https://github.com/eek01/eek01.github.io/blob/main/csce242/project/part1/project-topic.pdf">
+                        <a href="https://github.com/eek01/eek01.github.io/blob/main/csce242/project/part2-wireframe/ReverieDaydreamLayout.png">
                         <h3>Wireframe</h3>
                         <div class="assign-img">
                             <img src="images/wireframeScreenshot.png" alt="A screenshot of a wireframe for my project">
