added link to youtube

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -67,7 +67,9 @@
                         <div class="assign-img">
                             <img src="images/wireframeScreenshot.png" alt="A screenshot of a wireframe for my project">
                         </div>
-                        <p>This is the wireframe of my home page for my website.</p>
+                        </a>
+                        <a href="https://youtu.be/vULK0NjpnEk">
+                            <p>This is the wireframe of my home page for my website.</p>
                         </a>
                     </section>
                 </div>
