finished javascript assignment!!

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -49,6 +49,15 @@
                             <p>This recreation assignment is to show that I can reacreate html/css layouts given to me.</p>
                         </a>
                     </section>
+                    <section class="one"> 
+                        <a href="assignments/05-javascript/index.html">
+                            <h3>Assignment 5 - JavaScript Buttons, Functions, and More</h3>
+                            <div class="assign-img">
+                                <img src="images/javascriptIntro.png" alt="Screenshot of javascript assignment webpage">
+                            </div>
+                            <p>This is a javascript assignment to introduce basic concepts of the language.</p>
+                        </a>
+                    </section>
                 </div>
                 <h2>Projects</h2>
                 <div id="projects" class="columns">
