--- a/EastPoint/learningCSS/index.html
+++ b/EastPoint/learningCSS/index.html
@@ -10,11 +10,11 @@
             <li><a href="about.html">About</a></li>
         </ol>
         <h1>Random!!</h1>
-        <p>cornbread is yummy i like it a lot</p>
-        <p>cornbread is my fav snack!</p>
+        <p class="secret-p-man">cornbread is yummy i like it a lot</p>
+        <p id="secret">cornbread is my fav snack!</p>
+        <p class="secret-p-man">lalalalalalala</p>
 
         <button>Click me!</button>
-
         <table>
             <tr>
                 <th>ugandan knuckles</th>
