adding full wireframe to home page

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -81,6 +81,17 @@
                             <p>This is the wireframe of my home page for my website.</p>
                         </a>
                     </section>
+                    <section class="one">
+                        <a href="getting it">
+                        <h3>Wireframe</h3>
+                        <div class="assign-img">
+                            <img src="images/fullWireframe.png" alt="A screenshot of a wireframe for my project">
+                        </div>
+                        </a>
+                        <a href="https://youtu.be/xIHGHFgoR6k">
+                            <p>This is the wireframe of my home page for my website.</p>
+                        </a>
+                    </section>
                 </div>
             </main>
             <footer id="main-footer">
