--- a/csce242/index.html
+++ b/csce242/index.html
@@ -82,7 +82,7 @@
                         </a>
                     </section>
                     <section class="one">
-                        <a href="getting it">
+                        <a href="https://github.com/eek01/eek01.github.io/blob/main/csce242/project/part3-fullWireframe/ReverieDaydreamLayout.png">
                         <h3>Wireframe</h3>
                         <div class="assign-img">
                             <img src="images/fullWireframe.png" alt="A screenshot of a wireframe for my project">
