--- a/csce242/examples/05-javascript/index.html
+++ b/csce242/examples/05-javascript/index.html
@@ -11,19 +11,38 @@
             <header id="main-header">
                 <h1>Javascript</h1>
                 <nav id="main-nav">
-                    <ul>
+                    <div id="toggle-nav">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                    <ul class="hide-small">
                         <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html">loop</a></li>
+                        <li><a href="index.html">arrays</a></li>
                     </ul>
                 </nav>
             </header>
             <main id="content">
-                <div class="columns">
+                <div id="gallery" class="columns">
                     <section>
                         <button id="btn-show-msg">Show</button>
                         <p id="p-msg"></p>
                     </section>
                     <section>
                         <p><a id="a-click" href="">Click Me!!!</a></p>
+                    </section>
+                    <section id="ball-playground">
+                        <button id="btn-bounce">Start</button>
+                        <div id="ball"></div>
+                    </section>
+                    <section>
+                        <h3>Plant Health</h3>
+                        <p>
+                            <label for="txt-num-day">Enter Number of Days</label>
+                            <input type="number" id="txt-num-days">
+                        </p>
+                        <p id="p-plant-msg"></p>
                     </section>
                 </div>
             </main>
