added imgs and footer

--- a/csce242/project/homepage/index.html
+++ b/csce242/project/homepage/index.html
@@ -7,15 +7,15 @@
     <body>
         <header id="main-header">
             <div id="title" class="columns">
-                <a href="index.html"><img src="images/......" alt="Reverie Daydream Logo"></a>
+                <a href="index.html"><img src="images/ReverieDaydreamLogoResize.png" alt="Reverie Daydream Logo"></a>
                 <a href="index.html"><h1>Reverie Daydream</h1></a>
             </div>
             <nav id="header-nav">
                 <ul>
-                    <li><a href="womens.html">Womens</a></li>
-                    <li><a href="mens.html">Mens</a></li>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="impact.html">Impact</a></li>
+                    <li><a href="#">Womens</a></li>
+                    <li><a href="#">Mens</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Impact</a></li>
                 </ul>
             </nav>
         </header>
@@ -54,6 +54,15 @@
                     <p>reveriedaydream@gmail.com</p>
                 </div>
             </div>
+            <nav id="footer-nav-bottom" class="common-nav">
+                <ul>
+                    <li><a href="#">&copy; Reverie Daydream</a></li>
+                    <li><a href="#">Womens</a></li>
+                    <li><a href="#">Mens</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Impact</a></li>
+                </ul>
+            </nav>
         </footer>
     </body>
         </html>
