added assignment to homepage

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -58,6 +58,15 @@
                             <p>This is a javascript assignment to introduce basic concepts of the language.</p>
                         </a>
                     </section>
+                    <section class="one"> 
+                        <a href="assignments/06-javascript-conditionals/index.html">
+                            <h3>Assignment 5 - JavaScript Buttons, Functions, and More</h3>
+                            <div class="assign-img">
+                                <img src="images/javaScriptConditionals.png" alt="Screenshot of javascript assignment webpage">
+                            </div>
+                            <p>This is a javascript assignment to introduce conditionals.</p>
+                        </a>
+                    </section>
                 </div>
                 <h2>Projects</h2>
                 <div id="projects" class="columns">
