--- a/csce242/project/homepage/index.html
+++ b/csce242/project/homepage/index.html
@@ -4,14 +4,19 @@
         <title>Reverie Daydream</title>
         <link rel="stylesheet" href="styles.css">
     </head>
-    <body>
+    <body id="main-body">
         <header id="main-header">
             <div id="title" class="columns">
                 <a href="index.html"><img src="images/ReverieDaydreamLogoResize.png" alt="Reverie Daydream Logo"></a>
                 <a href="index.html"><h1>Reverie Daydream</h1></a>
             </div>
             <nav id="header-nav">
-                <ul>
+                <div id="toggle-nav">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                </div>
+                <ul id="main-header-nav-bar" class="hide-small">
                     <li><a href="#">Womens</a></li>
                     <li><a href="#">Mens</a></li>
                     <li><a href="#">Home</a></li>
@@ -22,23 +27,71 @@
         <main id="main-content">
             <section id="shop-mens-womens">
                 <div id="main-img-collage">
-                    <button>Shop Mens</button>
-                    <button>Shop Womens</button>
+                    <div id="main-img-collage-imgs" class="columns">
+                        <div id="main-img-collage-1">
+                            <img src="images/reverie1.png" alt="Full body image of a man modeling">
+                        </div>
+                        <div id="main-img-collage-2">
+                            <img src="images/reverie2.jpg" alt="Zoomed image of a woman leaning over to tie her tennis show">
+                            <img src="images/reverie3.jpg" alt="Zoomed image of three sweaters folded in a pile">
+                            <img src="images/reverie6.jpg" alt="Woman modeling a brown button-down">
+                            <img src="images/reverie13.png" alt="Man sitting in the road">
+                            <img src="images/reverie7.jpg" alt="Man sitting on a roof">
+                            <img src="images/reverie9.jpg" alt="Clothes hung up on a clothing rack">
+                        </div>
+                    </div>
+                    <div id="main-shop-btns">
+                        <button id="main-shop-men">Shop Mens</button>
+                        <button id="main-shop-women">Shop Womens</button>
+                    </div>
                 </div>
             </section>
             <section id="shop-sale" class="columns">
-                <div id="shop-sale-img">
+                <div id="shop-sale-img" class="one">
                     <img src="images/pinkPuffer.png" alt="Girl in pink puffer jacket modeling">
                 </div>
-                <div id="shop-sale-txt">
-                    <h1>Shop Below $20</h1>
-                    <button>Shop Sale</button>
+                <div id="shop-sale-txt" class="two">
+                    <div>
+                        <h1>Shop Below $20</h1>
+                        <button>Shop Sale</button>
+                    </div>
                 </div>
             </section>
             <section id="quick-shop">
                 <h1>New Arrivals, Just Landed</h1>
-                <div>
-                    <p>txt</p>
+                <div id="quick-shop-content">
+                    <button id="main-quick-shop-left">&lt;</button>
+                    <div id="main-quick-shop-imgs" class="columns">
+                        <div class="container">
+                            <img src="images/reverie11_cropped.png" alt="Image on woman pulling a sweater off over her head">
+                            <div class="text-block">
+                                <h2>Chunky Knit Sweater</h2>
+                                <h2>$60</h2>
+                            </div>
+                        </div>
+                        <div class="container">
+                            <img src="images/reverie16_cropped.png" alt="Image of man modeling a blue windbreaker">
+                            <div class="text-block">
+                                <h2>Navy Windbreaker</h2>
+                                <h2>$55</h2>
+                            </div>
+                        </div>
+                        <div class="container">
+                            <img src="images/reverie15_cropped.png" alt="Image of a leg wearing a white sandal">
+                            <div class="text-block">
+                                <h2>White Heeled Sandals</h2>
+                                <h2>$49</h2>
+                            </div>
+                        </div>
+                        <div class="container">
+                            <img src="images/reverie2_cropped.jpg" alt="Zoomed image of a woman leaning over to tie her tennis show">
+                            <div class="text-block">
+                                <h2>White Sneakers</h2>
+                                <h3>$99</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <button id="main-quick-shop-right">&gt;</button>
                 </div>
 
             </section>
@@ -64,5 +117,6 @@
                 </ul>
             </nav>
         </footer>
+        <script src="script.js"></script>
     </body>
         </html>
