--- a/csce242/project/homepage/index.html
+++ b/csce242/project/homepage/index.html
@@ -27,18 +27,20 @@
         <main id="main-content">
             <section id="shop-mens-womens">
                 <div id="main-img-collage">
-                    <div id="main-img-collage-imgs" class="columns">
-                        <div id="main-img-collage-1">
-                            <img src="images/reverie1.png" alt="Full body image of a man modeling">
-                        </div>
-                        <div id="main-img-collage-2">
-                            <img src="images/reverie2.jpg" alt="Zoomed image of a woman leaning over to tie her tennis show">
-                            <img src="images/reverie3.jpg" alt="Zoomed image of three sweaters folded in a pile">
-                            <img src="images/reverie6.jpg" alt="Woman modeling a brown button-down">
-                            <img src="images/reverie13.png" alt="Man sitting in the road">
-                            <img src="images/reverie7.jpg" alt="Man sitting on a roof">
-                            <img src="images/reverie9.jpg" alt="Clothes hung up on a clothing rack">
-                        </div>
+                    <div id="main-img-collage-imgs">
+                        <img class="main-img-collage-row-2 main-img-collage-col-2" src="images/reverie1.png" alt="Full body image of a man modeling">
+                        <img src="images/reverie2.jpg" alt="Zoomed image of a woman leaning over to tie her tennis show">
+                        <img src="images/reverie3.jpg" alt="Zoomed image of three sweaters folded in a pile">
+                        <img src="images/reverie5.jpg" alt="Woman modeling a brown button-down">
+                        <img src="images/reverie13.png" alt="Man sitting in the road">
+                        <img src="images/reverie7.jpg" alt="Man sitting on a roof">
+                        <img src="images/reverie9.jpg" alt="Clothes hung up on a clothing rack">
+                    </div>
+                    <div id="img-collage-flower" class="hide-small">
+                        <img src="images/flower200px.png" alt="flower">
+                    </div>
+                    <div id="img-collage-flower2" class="hide-small">
+                        <img src="images/flower140.png" alt="flower">
                     </div>
                     <div id="main-shop-btns">
                         <button id="main-shop-men">Shop Mens</button>
@@ -54,6 +56,33 @@
                     <div>
                         <h1>Shop Below $20</h1>
                         <button>Shop Sale</button>
+                        <div id="sale-flower1">
+                            <img class="hide-small" src="images/flower200px.png" alt="flower">
+                        </div>
+                        <div id="sale-flower2">
+                            <img src="images/flower140.png" alt="flower">
+                        </div>
+                        <div id="sale-flower3">
+                            <img class="hide-small" src="images/flower100px.png" alt="flower">
+                        </div>
+                        <div id="sale-flower4">
+                            <img class="hide-small" src="images/flower60px.png" alt="flower">
+                        </div>
+                        <div id="sale-flower5">
+                            <img class="hide-small"  src="images/flower60px.png" alt="flower">
+                        </div>
+                        <div id="sale-flower6">
+                            <img class="hide-small"  src="images/flower200px.png" alt="flower">
+                        </div>
+                        <div id="sale-flower7">
+                            <img class="hide-small"  src="images/flower140.png" alt="flower">
+                        </div>
+                        <div id="sale-flower8">
+                            <img class="hide-small"  src="images/flower60px.png" alt="flower">
+                        </div>
+                        <div id="sale-flower9">
+                            <img class="hide-small"  src="images/flower60px.png" alt="flower">
+                        </div>
                     </div>
                 </div>
             </section>
@@ -62,34 +91,42 @@
                 <div id="quick-shop-content">
                     <button id="main-quick-shop-left">&lt;</button>
                     <div id="main-quick-shop-imgs" class="columns">
-                        <div class="container">
-                            <img src="images/reverie11_cropped.png" alt="Image on woman pulling a sweater off over her head">
-                            <div class="text-block">
-                                <h2>Chunky Knit Sweater</h2>
-                                <h2>$60</h2>
+                        <div class="main-quick-shop-width">
+                            <div class="container">
+                                <img src="images/reverie11_cropped.png" alt="Image on woman pulling a sweater off over her head">
+                                <div class="text-block">
+                                    <h2>Chunky Knit Sweater</h2>
+                                    <h2>$60</h2>
+                                </div>
                             </div>
                         </div>
-                        <div class="container">
-                            <img src="images/reverie16_cropped.png" alt="Image of man modeling a blue windbreaker">
-                            <div class="text-block">
-                                <h2>Navy Windbreaker</h2>
-                                <h2>$55</h2>
+                        <div class="main-quick-shop-width">
+                            <div class="container">
+                                <img src="images/reverie16_cropped.png" alt="Image of man modeling a blue windbreaker">
+                                <div class="text-block">
+                                    <h2>Navy Windbreaker</h2>
+                                    <h2>$55</h2>
+                                </div>
                             </div>
                         </div>
-                        <div class="container">
-                            <img src="images/reverie15_cropped.png" alt="Image of a leg wearing a white sandal">
-                            <div class="text-block">
-                                <h2>White Heeled Sandals</h2>
-                                <h2>$49</h2>
+                        <div class="main-quick-shop-width">
+                            <div class="container">
+                                <img src="images/reverie15_cropped.png" alt="Image of a leg wearing a white sandal">
+                                <div class="text-block">
+                                    <h2>White Heeled Sandals</h2>
+                                    <h2>$49</h2>
+                                </div>
                             </div>
                         </div>
-                        <div class="container">
-                            <img src="images/reverie2_cropped.jpg" alt="Zoomed image of a woman leaning over to tie her tennis show">
-                            <div class="text-block">
-                                <h2>White Sneakers</h2>
-                                <h3>$99</h3>
+                        <div class="main-quick-shop-width">
+                            <div class="container">
+                                <img src="images/reverie2_cropped.jpg" alt="Zoomed image of a woman leaning over to tie her tennis show">
+                                <div class="text-block">
+                                    <h2>White Sneakers</h2>
+                                    <h3>$99</h3>
+                                </div>
                             </div>
-                        </div>
+                        </div>    
                     </div>
                     <button id="main-quick-shop-right">&gt;</button>
                 </div>
@@ -105,6 +142,13 @@
                 <div id="connected">
                     <h3>Get Connected</h3>
                     <p>reveriedaydream@gmail.com</p>
+                    <div id="connected-img" class="columns">
+                        <img src="images/Instagram.png" alt="Instagram Logo">
+                        <img src="images/Facebook.png" alt="Facebook Logo">
+                        <img src="images/pinterest.png" alt="Pinterest Logo">
+                        <img src="images/tiktok.png" alt="TikTok Logo">
+                        <img src="images/youtube.png" alt="Youtube Logo">
+                    </div>
                 </div>
             </div>
             <nav id="footer-nav-bottom" class="common-nav">
