--- a/csce242/project/homepage/index.html
+++ b/csce242/project/homepage/index.html
@@ -53,7 +53,7 @@
                     <img src="images/pinkPuffer.png" alt="Girl in pink puffer jacket modeling">
                 </div>
                 <div id="shop-sale-txt" class="two">
-                    <div>
+                    <div id="sale-content-wrapper">
                         <h1>Shop Below $20</h1>
                         <button>Shop Sale</button>
                         <div id="sale-flower1">
