added homepage to my home page

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -101,6 +101,15 @@
                             <p>This is the wireframe of my home page for my website.</p>
                         </a>
                     </section>
+                    <section class="one">
+                        <a href="project/homepage/index.html">
+                            <h3>Home Page</h3>
+                            <div class="assign-img">
+                                <img src="images/reverieDaydreamHomepage.png" alt="A screenshot of a wireframe for my project">
+                            </div>
+                            <p>The HTML and CSS of my home page.</p>
+                        </a>
+                    </section>
                 </div>
             </main>
             <footer id="main-footer">
