fixed img margin

--- a/csce242/project/homepage/index.html
+++ b/csce242/project/homepage/index.html
@@ -50,7 +50,7 @@
             </section>
             <section id="shop-sale" class="columns">
                 <div id="shop-sale-img" class="one">
-                    <img src="images/pinkPuffer.png" alt="Girl in pink puffer jacket modeling">
+                    <img class="one" src="images/pinkPuffer.png" alt="Girl in pink puffer jacket modeling">
                 </div>
                 <div id="shop-sale-txt" class="two">
                     <div id="sale-content-wrapper">
