completed javascript loop

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -60,11 +60,20 @@
                     </section>
                     <section class="one"> 
                         <a href="assignments/06-javascript-conditionals/index.html">
-                            <h3>Assignment 5 - JavaScript Buttons, Functions, and More</h3>
+                            <h3>Assignment 6 - JavaScript Buttons, Functions, and More</h3>
                             <div class="assign-img">
                                 <img src="images/javaScriptConditionals.png" alt="Screenshot of javascript assignment webpage">
                             </div>
                             <p>This is a javascript assignment to introduce conditionals.</p>
+                        </a>
+                    </section>
+                    <section class="one"> 
+                        <a href="assignments/07-javascript-loops/index.html">
+                            <h3>Assignment 7 - JavaScript Loops</h3>
+                            <div class="assign-img">
+                                <img src="images/javascript-loop.PNG" alt="Screenshot of javascript loop assignment">
+                            </div>
+                            <p>This is a javascript assignment to introduce loops.</p>
                         </a>
                     </section>
                 </div>
