working on project

--- a/csce242/project/part5-allPages/impact.html
+++ b/csce242/project/part5-allPages/impact.html
@@ -25,7 +25,64 @@
             </nav>
         </header>
         <main>
+            <div id="impact-title">
+                <div id="overlay"></div>
+                <img src="impact-images/impact-bg.jpg">
+                <div id="impact-title-txt">
+                    <h1>Our Impact</h1>
+                    <h2>We aim to use the resources we have to aid, empower, and inspire the community.</h2>
+                </div>
+            </div>
+            <div id="nonprofit" class="columns">
+                <div class="one">
+                    <img src="impact-images/nonprofit.jpg">
+                </div>
+                <div id="nonprofit-txt" class="one">
+                    <h1>Every order we give 5% of to a nonprofit to support the community</h1>
+                </div>
+            </div>
+            <div id="nonprofit-highlights">
+                <h1>Nonprofits</h1>
+                    <button id="nonprofit-btn-left">&lt;</button>
+                    <div id="nonprofit-highlight-img" class="columns">
+                        <div class="nonprofit-width">
+                            <div class="nonprofit-container">
+                                <img src="images/reverie11_cropped.png" alt="Image on woman pulling a sweater off over her head">
+                                <div class="nonprofit-txt-block">
+                                    <h2>Chunky Knit Sweater</h2>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="nonprofit-width">
+                            <div class="nonprofit-container">
+                                <img src="images/reverie16_cropped.png" alt="Image of man modeling a blue windbreaker">
+                                <div class="nonprofit-txt-block">
+                                    <h2>Navy Windbreaker</h2>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="nonprofit-width">
+                            <div class="nonprofit-container">
+                                <img src="images/reverie15_cropped.png" alt="Image of a leg wearing a white sandal">
+                                <div class="nonprofit-txt-block">
+                                    <h2>White Heeled Sandals</h2>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="nonprofit-width">
+                            <div class="nonprofit-container">
+                                <img src="images/reverie2_cropped.jpg" alt="Zoomed image of a woman leaning over to tie her tennis show">
+                                <div class="nonprofit-txt-block">
+                                    <h2>White Sneakers</h2>
+                                </div>
+                            </div>
+                        </div>    
+                    </div>
+                    <button id="main-quick-shop-right">&gt;</button>
 
+
+
+            </div>
         </main>
         <footer id="main-footer">
             <div id="main-footer-content" class="columns">
