--- a/csce242/project/part5-allPages/mens.html
+++ b/csce242/project/part5-allPages/mens.html
@@ -47,10 +47,10 @@
                     </div>
                 </div>
             </div>
-            <div id="shopping-shop-container">
+            <div id="shop-container">
                 <div id="mens-shop" class="columns">
                     <a href="womens-shop.html">
-                        <section class="womens-shop-section">
+                        <section class="shop-section">
                             <img src="womens-images/reverieImgButtonDown.jpg" alt="">
                             <div id="womens-shop-section-txt">
                                 <p>description</p>
@@ -58,58 +58,58 @@
                             </div>
                         </section>
                     </a>
-                    <section class="womens-shop-section">
+                    <section class="shop-section">
                         <img src="womens-images/reveriePuffer.png" alt="">
-                        <div id="womens-shop-section-txt">
+                        <div class="shop-section-txt">
                             <p>description</p>
                             <p>price</p>
                         </div>
                     </section>
-                    <section class="womens-shop-section">
+                    <section class="shop-section">
                         <img src="womens-images/reveriePuffer.png" alt="">
-                        <div id="womens-shop-section-txt">
+                        <div class="shop-section-txt">
                             <p>description</p>
                             <p>price</p>
                         </div>
                     </section>
-                    <section class="womens-shop-section">
+                    <section class="shop-section">
                         <img src="womens-images/reveriePuffer.png" alt="">
-                        <div id="womens-shop-section-txt">
+                        <div class="shop-section-txt">
                             <p>description</p>
                             <p>price</p>
                         </div>
                     </section>
-                    <section class="womens-shop-section">
+                    <section class="shop-section">
                         <img src="womens-images/reveriePuffer.png" alt="">
-                        <div id="womens-shop-section-txt">
+                        <div class="shop-section-txt">
                             <p>description</p>
                             <p>price</p>
                         </div>
                     </section>
-                    <section class="womens-shop-section">
+                    <section class="shop-section">
                         <img src="womens-images/reveriePuffer.png" alt="">
-                        <div id="womens-shop-section-txt">
+                        <div class="shop-section-txt">
                             <p>description</p>
                             <p>price</p>
                         </div>
                     </section>
-                                        <section class="womens-shop-section">
+                    <section class="shop-section">
                         <img src="womens-images/reveriePuffer.png" alt="">
-                        <div id="womens-shop-section-txt">
+                        <div class="shop-section-txt">
                             <p>description</p>
                             <p>price</p>
                         </div>
                     </section>
-                                        <section class="womens-shop-section">
+                    <section class="shop-section">
                         <img src="womens-images/reveriePuffer.png" alt="">
-                        <div id="womens-shop-section-txt">
+                        <div class="shop-section-txt">
                             <p>description</p>
                             <p>price</p>
                         </div>
                     </section>
-                                        <section class="womens-shop-section">
+                    <section class="shop-section">
                         <img src="womens-images/reveriePuffer.png" alt="">
-                        <div id="womens-shop-section-txt">
+                        <div class="shop-section-txt">
                             <p>description</p>
                             <p>price</p>
                         </div>
