--- a/csce242/project/part5-allPages/home.html
+++ b/csce242/project/part5-allPages/home.html
@@ -47,77 +47,75 @@
                     </div>
                 </div>
             </div>
-            <div id="shopping-shop-container">
+            <div id="shop-container">
                 <div id="home-shop" class="columns">
                     <a href="womens-shop.html">
-                        <section class="womens-shop-section">
+                        <section class="shop-section">
                             <img src="womens-images/reverieImgButtonDown.jpg" alt="">
-                            <div id="womens-shop-section-txt">
+                            <div class="shop-section-txt">
                                 <p>description</p>
                                 <p>price</p>
                             </div>
                         </section>
                     </a>
-                    <section class="womens-shop-section">
+                    <section class="shop-section">
                         <img src="womens-images/reveriePuffer.png" alt="">
-                        <div id="womens-shop-section-txt">
+                        <div class="shop-section-txt">
                             <p>description</p>
                             <p>price</p>
                         </div>
                     </section>
-                    <section class="womens-shop-section">
+                    <section class="shop-section">
                         <img src="womens-images/reveriePuffer.png" alt="">
-                        <div id="womens-shop-section-txt">
+                        <div class="shop-section-txt">
                             <p>description</p>
                             <p>price</p>
                         </div>
                     </section>
-                    <section class="womens-shop-section">
+                    <section class="shop-section">
                         <img src="womens-images/reveriePuffer.png" alt="">
-                        <div id="womens-shop-section-txt">
+                        <div class="shop-section-txt">
                             <p>description</p>
                             <p>price</p>
                         </div>
                     </section>
-                    <section class="womens-shop-section">
+                    <section class="shop-section">
                         <img src="womens-images/reveriePuffer.png" alt="">
-                        <div id="womens-shop-section-txt">
+                        <div class="shop-section-txt">
                             <p>description</p>
                             <p>price</p>
                         </div>
                     </section>
-                    <section class="womens-shop-section">
+                    <section class="shop-section">
                         <img src="womens-images/reveriePuffer.png" alt="">
-                        <div id="womens-shop-section-txt">
+                        <div class="shop-section-txt">
                             <p>description</p>
                             <p>price</p>
                         </div>
                     </section>
-                                        <section class="womens-shop-section">
+                    <section class="shop-section">
                         <img src="womens-images/reveriePuffer.png" alt="">
-                        <div id="womens-shop-section-txt">
+                        <div class="shop-section-txt">
                             <p>description</p>
                             <p>price</p>
                         </div>
                     </section>
-                                        <section class="womens-shop-section">
+                    <section class="shop-section">
                         <img src="womens-images/reveriePuffer.png" alt="">
-                        <div id="womens-shop-section-txt">
+                        <div class="shop-section-txt">
                             <p>description</p>
                             <p>price</p>
                         </div>
                     </section>
-                                        <section class="womens-shop-section">
+                    <section class="shop-section">
                         <img src="womens-images/reveriePuffer.png" alt="">
-                        <div id="womens-shop-section-txt">
+                        <div class="shop-section-txt">
                             <p>description</p>
                             <p>price</p>
                         </div>
                     </section>
                 </div>
-
             </div>
-
         </main>
         <footer id="main-footer">
             <div id="main-footer-content" class="columns">
