working on project

--- a/csce242/project/part5-allPages/impact.html
+++ b/csce242/project/part5-allPages/impact.html
@@ -47,33 +47,33 @@
                     <div id="nonprofit-highlight-img" class="columns">
                         <div class="nonprofit-width">
                             <div class="nonprofit-container">
-                                <img src="images/reverie11_cropped.png" alt="Image on woman pulling a sweater off over her head">
+                                <img src="impact-images/habitat4humanity.jpg" alt="">
                                 <div class="nonprofit-txt-block">
-                                    <h2>Chunky Knit Sweater</h2>
+                                    <h3>Habitat for Humanity</h3>
                                 </div>
                             </div>
                         </div>
                         <div class="nonprofit-width">
                             <div class="nonprofit-container">
-                                <img src="images/reverie16_cropped.png" alt="Image of man modeling a blue windbreaker">
+                                <img src="impact-images/natureCons.jpg" alt="Image of man modeling a blue windbreaker">
                                 <div class="nonprofit-txt-block">
-                                    <h2>Navy Windbreaker</h2>
+                                    <h3>The Nature Conservancy</h3>
                                 </div>
                             </div>
                         </div>
                         <div class="nonprofit-width">
                             <div class="nonprofit-container">
-                                <img src="images/reverie15_cropped.png" alt="Image of a leg wearing a white sandal">
+                                <img src="impact-images/treesForTheFuture.jpg" alt="Image of a leg wearing a white sandal">
                                 <div class="nonprofit-txt-block">
-                                    <h2>White Heeled Sandals</h2>
+                                    <h3>Trees for the Future</h3>
                                 </div>
                             </div>
                         </div>
                         <div class="nonprofit-width">
                             <div class="nonprofit-container">
-                                <img src="images/reverie2_cropped.jpg" alt="Zoomed image of a woman leaning over to tie her tennis show">
+                                <img src="impact-images/350.jpg" alt="Zoomed image of a woman leaning over to tie her tennis show">
                                 <div class="nonprofit-txt-block">
-                                    <h2>White Sneakers</h2>
+                                    <h3>350</h3>
                                 </div>
                             </div>
                         </div>    
