--- a/csce242/assignments/08-javascript-arrays/index.html
+++ b/csce242/assignments/08-javascript-arrays/index.html
@@ -23,7 +23,7 @@
             <iframe id="yt-frame" class="hidden" src="https://www.youtube.com/embed/ZbZSe6N_BXs?si=" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </main>
         <footer>
-            <p>@erinkelly.com</p>
+            <p>@erinekelly.com</p>
         </footer>
         <script src="script.js"></script>
     </body>
